--- a/NETUiHentaiXamarin/NETUiHentaiXamarin/view/SearchPage.xaml
+++ b/NETUiHentaiXamarin/NETUiHentaiXamarin/view/SearchPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NETUiHentaiXamarin.view.SearchPage">
+             x:Class="NETUiHentaiXamarin.view.SearchPage"
+             Title="검색">
     <ContentPage.Content>
         <StackLayout>
             <StackLayout Orientation="Horizontal" BackgroundColor="Transparent" HorizontalOptions="Center" Margin="0,5,0,0" >
